some layout issues - fix tables

--- a/cv.css
+++ b/cv.css
@@ -11,32 +11,31 @@ div.person {
     border-width: 2px;
     border-color: black;
     border-style: solid;
-    background-color: #FFFFDD;
 }
 
 div.person > div {
     text-align: center;
-    padding: 10px 10px 10px 10px;
+    padding: 20px;
     display: inline-block;
     vertical-align:top;
 }
 
 div.person div.infos,
 div.projects,
-ul
+ul.table
 {
     display:table;
     width:100%;
 }
 
-ul {
+ul.table {
     list-style-type: none;
     padding: 0;
 }
 
 div.person div.infos div.infoGroup,
 div.project,
-li
+ul.table > li
 {
     display: table-row-group;
 }
@@ -52,34 +51,48 @@ div.person div.infos div.label,
 div.person div.infos div.value,
 div.project div.label,
 div.project div.value,
-dt,
+ul.table dt,
 dd
 {
     display: table-cell;
+    padding: 5px 10px;
 }
+
+div.project div.label,
+dt
+{
+    width: 14%;
+}
+
 
 h1 {
     font-size: 16pt;
     font-weight: bold;
-    margin-top: 10mm;
-    margin-bottom: 5mm;
+    margin-top: 2em;
 }
 
 h2 {
     font-size: 12pt;
     font-weight: bold;
-    margin-top: 5mm;
-    margin-bottom: 2mm;
+    margin-top: 2em;
+}
+
+h3 {
+    font-style: italic;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
+
+h4 {
+    font-weight: normal;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 
 div.paragraph {
     padding-top: 2mm;
     padding-bottom: 2mm
-}
-
-div.highlighted {
-    font-style: italic;
-    font-weight: bold;
 }
 
 div.inline {
